# CompilerConstruction

./: .gitignore  CMakeLists.txt  README.md  cmake_ninja_wrapper.py  meson.build
doc/: changes.md  overview.md
doc/examples/: Exe4_2.mC  Exe4_3.mC  Exe4_4.mC  Exe_4_1.mC  ackermann1.c  ackermann1.mC  ackermann1.mC.graph  ackermann1.s  ackermann2.mC  ackermann3.mC  array_calculations.mC  binary_search.mC  bubble_sort1.mC  bubble_sort2.mC  bubble_sort3.mC  builtin.h  circle_props.mC  diamond.mC  even.mC  even_pi.mC  example_1.mc  example_1.mc.stdin  example_1.mc.stdout  example_2.mc  example_2.mc.stdout  example_3.mc  example_3.mc.stdout  example_4.mc  fem.mC  fib.mC  fib5.mC  find_primes.mC  find_primes.mC.stdout  functions.mC  heavy_load.mC  hello.mC  insertion_sort.mC  leap_year.mC  leibniz_pi.mC  lucas_number.mC  (+12 more)
examples/: example_2.mc
include/mCc/: ast.h  ast_print.h  ast_semantic_checks.h  ast_symbol_table.h  ast_visit.h  cfg.h  code_generation.h  error.h  parser.h  tac.h  utils.h
src/: ast.c  ast_print.c  ast_semantic_checks.c  ast_symbol_table.c  ast_visit.c  cfg.c  code_generation.c  error.c  mC_builtins.c  parser.c  parser.y  scanner.l  tac.c  utils.c
test/: ast_semantic_checks.cpp  ast_symbol_table.cpp  cfg.cpp  code_generation.cpp  integration  parser.cpp  tac.cpp  what_to_test.md
